# app-escritorio-nextjs-tauri-rust

./: package-lock.json  package.json
migration/: Cargo.toml
migration/src/: lib.rs  m20250902_192406_create_usuario.rs
src-tauri/: .gitignore  Cargo.toml  Sea.toml  tauri.conf.json
src-tauri/src/: auth.rs  main.rs  models.rs
src-tauri/src/entities/: mod.rs  prelude.rs  users.rs
src/app/: page.tsx
src/app/register/: page.tsx
src/entities/: mod.rs  prelude.rs
