[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["JMTB"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
# Web framework

sea-orm = { version = "1.0.0", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
# Para hashing de contraseñas
argon2 = { version = "0.5", features = ["std"] }

chrono = { version = "0.4", features = ["serde"] }
# Para JWT
jsonwebtoken = "9"
# Para trabajar con UUIDs
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.4", features = [] }
tauri-plugin-log = "2"
rand = "0.9.2"
rand_core = "0.6.4"
tower-http = { version = "0.6.6", features = ["cors"] }
axum = "0.8.4"
thiserror = "2.0.16"

[dependencies.sqlx]
version = "0.8.6"
features = ["runtime-tokio-native-tls", "sqlite"]

[dev-dependencies]
sea-orm-cli = "1.0.0"

